testsuite/poke.pkl/scons-union-diag-1.pk
/* { dg-do compile } */

type Foo = union { byte b : b > 0; int i; };
Foo { b = 0, i = 0 }; /* { dg-error "exactly one" } */
